[gd_scene load_steps=9 format=3 uid="uid://kjtk0whpobva"]

[ext_resource type="Theme" uid="uid://cxpo07c6dp3tp" path="res://themes/main_menu.tres" id="1_6kid4"]
[ext_resource type="Script" path="res://scenes/menus/levels_screen.gd" id="2_a4n2b"]
[ext_resource type="Texture2D" uid="uid://c7sttspmxggwq" path="res://ui/main_menu_background.jpg" id="3_cngd4"]
[ext_resource type="Texture2D" uid="uid://clsu5bos6yx3m" path="res://scenes/levels/paper_doll/paper_doll_preview.png" id="4_kqlr7"]
[ext_resource type="Texture2D" uid="uid://b77k0nb36q5q7" path="res://scenes/levels/school/school_preview.png" id="6_gqev2"]
[ext_resource type="Texture2D" uid="uid://b7yc3q8vqevnv" path="res://scenes/levels/branson/branson_preview.png" id="6_pr3fi"]

[sub_resource type="InputEventKey" id="InputEventKey_0lgvy"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_l246c"]
events = [SubResource("InputEventKey_0lgvy")]

[node name="LevelsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6kid4")
script = ExtResource("2_a4n2b")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_cngd4")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -147.0
offset_top = -99.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_6kid4")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="QuitButton" type="Button" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_l246c")
text = "< Back"

[node name="LevelsContainer" type="GridContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -277.5
offset_top = -141.0
offset_right = 277.5
offset_bottom = 141.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 25
columns = 4

[node name="Level1Button" type="TextureButton" parent="CanvasLayer/LevelsContainer"]
custom_minimum_size = Vector2(120, 90)
layout_mode = 2
texture_normal = ExtResource("4_kqlr7")
ignore_texture_size = true
stretch_mode = 0

[node name="Level2Button" type="TextureButton" parent="CanvasLayer/LevelsContainer"]
custom_minimum_size = Vector2(120, 90)
layout_mode = 2
texture_normal = ExtResource("6_gqev2")
ignore_texture_size = true
stretch_mode = 0

[node name="Level3Button" type="TextureButton" parent="CanvasLayer/LevelsContainer"]
custom_minimum_size = Vector2(120, 90)
layout_mode = 2
disabled = true
texture_normal = ExtResource("6_pr3fi")
ignore_texture_size = true
stretch_mode = 0

[node name="Level4Button" type="TextureButton" parent="CanvasLayer/LevelsContainer"]
custom_minimum_size = Vector2(120, 90)
layout_mode = 2
disabled = true
texture_normal = ExtResource("3_cngd4")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/LevelsContainer"]
layout_mode = 2
text = "PaperDoll"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/LevelsContainer"]
layout_mode = 2
text = "Classrooms"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="CanvasLayer/LevelsContainer"]
layout_mode = 2
text = "Branson"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="CanvasLayer/LevelsContainer"]
layout_mode = 2
text = "Level 4"
horizontal_alignment = 1

[node name="Control" type="Control" parent="CanvasLayer/LevelsContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Control2" type="Control" parent="CanvasLayer/LevelsContainer"]
layout_mode = 2

[node name="Control3" type="Control" parent="CanvasLayer/LevelsContainer"]
layout_mode = 2

[node name="Control4" type="Control" parent="CanvasLayer/LevelsContainer"]
layout_mode = 2

[node name="TextureButton5" type="TextureButton" parent="CanvasLayer/LevelsContainer"]
custom_minimum_size = Vector2(120, 90)
layout_mode = 2
disabled = true
texture_normal = ExtResource("3_cngd4")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton6" type="TextureButton" parent="CanvasLayer/LevelsContainer"]
custom_minimum_size = Vector2(120, 90)
layout_mode = 2
disabled = true
texture_normal = ExtResource("3_cngd4")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton7" type="TextureButton" parent="CanvasLayer/LevelsContainer"]
custom_minimum_size = Vector2(120, 90)
layout_mode = 2
disabled = true
texture_normal = ExtResource("3_cngd4")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton8" type="TextureButton" parent="CanvasLayer/LevelsContainer"]
custom_minimum_size = Vector2(120, 90)
layout_mode = 2
disabled = true
texture_normal = ExtResource("3_cngd4")
ignore_texture_size = true
stretch_mode = 0

[node name="Label5" type="Label" parent="CanvasLayer/LevelsContainer"]
layout_mode = 2
text = "Level 5"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="CanvasLayer/LevelsContainer"]
layout_mode = 2
text = "Level 6"
horizontal_alignment = 1

[node name="Label7" type="Label" parent="CanvasLayer/LevelsContainer"]
layout_mode = 2
text = "Level 7"
horizontal_alignment = 1

[node name="Label8" type="Label" parent="CanvasLayer/LevelsContainer"]
layout_mode = 2
text = "Level 8"
horizontal_alignment = 1

[connection signal="pressed" from="CanvasLayer/MarginContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/LevelsContainer/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="CanvasLayer/LevelsContainer/Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="CanvasLayer/LevelsContainer/Level3Button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="CanvasLayer/LevelsContainer/Level4Button" to="." method="_on_level_4_button_pressed"]
